# InstagramCloneSQL

./: .gitignore  ig_api.db  main.py  pyproject.toml  requirements.txt
app/: deps.py  settings.py  utils.py
db/: db.py  db_comment.py  db_post.py  db_user.py  models.py
post/: post.py  schemas.py
routers/: comment.py
user/: schemas.py  user.py
