[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
Flask = "^2.2.0"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
python-jose = "^3.3.0"
pymongo = "^4.2.0"
pydantic = {extras = ["email"], version = "^1.10.2"}
passlib = "^1.7.4"
python-multipart = "^0.0.5"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
